<resources>
    <string name="app_name">CAR GAME 2</string>
    <string name="menu_title">CAR GAME 2</string>
    <string name="high_scores">High Scores</string>
    <string name="control_mode">Control Mode</string>
    <string name="buttons">Buttons</string>
    <string name="gyro">Gyro</string>
    <string name="game_speed">Game Speed</string>
    <string name="fast">Fast</string>
    <string name="extreme">Extreme</string>
    <string name="start_new_game">Start New Game</string>
    <string name="back_to_menu">Back to Menu</string>
</resources>